--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   border: 0;
   margin: 0;
   padding: 0;
@@ -28,9 +30,8 @@
 }
 
 #voice-trigger-workflow {
-  position: absolute;
-  top: 16px;
-  margin-left: 16px;
+  display: inline;
+  position: relative;
   z-index: 1000;
 }
 
@@ -39,7 +40,7 @@
   width: 32px;
   background-color: var(--btn);
   border-radius: 50%;
-  padding-top: 8px; 
+  padding-top: 8px;
   text-align: center;
 }
 
@@ -59,6 +60,12 @@
 
 #main[opened] {
   display: block;
+  position: absolute;
+  width: max-content;
+  left: 0px;
+  top: 0px;
+  margin: 0px;
+  transform: translate(0px, 47px);
 }
 
 #menu {
@@ -87,6 +94,7 @@
 #menu p:nth-child(1) {
   padding-top: 24px;
 }
+
 #menu p:nth-last-child(1) {
   border-bottom: none;
   padding-bottom: 24px;
@@ -178,6 +186,3 @@
   background-color: var(--triggerBtn);
   color: var(--triggerTextHover);
 }
-
-
-
